# GameEngine

./: .gitignore  .gitmodules  CMakeLists.txt  CacheDatFile.cpp  CacheDatFile.h  Camera.h  DepthTexture.shader  GTAEncryption.cpp  GTAEncryption.h  Game.cpp  Game.h  GameData.cpp  GameData.h  GameObject.h  GameWorld.cpp  GameWorld.h  InGameState.cpp  InGameState.h  InputManager.cpp  InputSystem.cpp  InputSystem.h  Light.cpp  Light.h  Material.cpp  Material.h  MenuState.cpp  MenuState.h  Mesh.cpp  Mesh.h  MeshManager.cpp  MeshManager.h  Meta.h  Model.cpp  Model.h  MyGameEngine.sln  MyGameEngine.vcxproj  MyGameEngine.vcxproj.filters  Object.cpp  Object.h  PhysicsDebugDrawer.cpp  (+67 more)
MyGameEngine/: CacheDatFile.cpp  CacheDatFile.h  Camera.h  Entity.h  FileType.h  GTAEncryption.cpp  GTAEncryption.h  Game.cpp  Game.h  GameData.cpp  GameData.h  GameWorld.cpp  GameWorld.h  InGameState.cpp  InGameState.h  InputManager.cpp  InputManager.h  Light.h  Material.cpp  Material.h  MenuState.cpp  MenuState.h  Mesh.cpp  Mesh.h  MeshManager.cpp  MeshManager.h  Meta.h  MyGameEngine.vcxproj  MyGameEngine.vcxproj.filters  Object.cpp  Object.h  PauseState.cpp  PauseState.h  PhysicsDebugDrawer.cpp  PhysicsDebugDrawer.h  Player.cpp  Player.h  RenderingSystem.cpp  RenderingSystem.h  ResourceManager.cpp  (+37 more)
MyGameEngine/Shaders/: gbuffer.shader  gbufferLighting.shader  hdrShader.shader
MyGameEngine/bullet/lib/: Bullet3Common.lib  BulletCollision.lib  BulletDynamics.lib  BulletInverseDynamics.lib  LinearMath.lib
MyGameEngine/freetype/objs/: freetype.lib
MyGameEngine/recastnavigation/lib/: DetourCrowd.lib  DetourTileCache.lib  Recast.lib
MyGameEngine/zlib/contrib/masmx64/: inffasx64.lst
android/: settings.gradle
android/app/: CMakeLists.txt  build.gradle
android/app/src/androidTest/java/com/example/mapviewer/: ExampleInstrumentedTest.java
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: engine.cpp
android/app/src/test/java/com/example/mapviewer/: ExampleUnitTest.java
android/gradle/wrapper/: gradle-wrapper.properties
bullet/BulletSoftBody/: btSoftBody.cpp
bullet/lib/: Bullet2FileLoader.lib  Bullet3Collision.lib  Bullet3Common.lib  Bullet3Dynamics.lib  Bullet3Geometry.lib  Bullet3OpenCL_clew.lib  BulletCollision.lib  BulletDynamics.lib  BulletFileLoader.lib  BulletInverseDynamics.lib  BulletInverseDynamicsUtils.lib  BulletSoftBody.lib  BulletWorldImporter.lib  BulletXmlWorldImporter.lib  ConvexDecomposition.lib  GIMPACTUtils.lib  HACD.lib  LinearMath.lib
cmake/: FindDXC_SPIRV.cmake
recastnavigation/lib/: DebugUtils.lib  Detour.lib  DetourCrowd.lib  DetourTileCache.lib  Recast.lib
shaders/: CMakeLists.txt  test.glsl  test.hlsl  test.msl
shaders/Metal/: test.ps.msl
shaders/Vulkan/: test.ps.glsl
src/: .clang-format  Allocator.cpp  Allocator.h  AwcLoader.cpp  AwcLoader.h  BaseRenderer.cpp  BaseRenderer.h  Buffer.h  CBuilding.cpp  CBuilding.h  CEntity.cpp  CEntity.h  CMakeLists.txt  CPed.cpp  CPed.h  CVehicle.cpp  CVehicle.h  CacheDatFile.cpp  CacheDatFile.h  Camera.cpp  Camera.h  CommandBuffer.cpp  CommandBuffer.h  Entity.cpp  Entity.h  FileType.h  FreeListAllocator.cpp  FreeListAllocator.h  GTAEncryption.cpp  GTAEncryption.h  Game.cpp  Game.h  GameData.cpp  GameData.h  GameRenderer.cpp  GameRenderer.h  GameWorld.cpp  GameWorld.h  Geometry.cpp  Geometry.h  (+97 more)
src/OpenGL/: DebugDrawer.cpp  DebugDrawer.h  GLBuffer.h  GLFunctions.cpp  GLFunctions.h  GLRenderContext.cpp  GLRenderContext.h  GLRenderSystem.cpp  GLRenderSystem.h  GLShader.h  GLShaderProgram.h  GLTexture.cpp  GLTexture.h  GlobalPool.cpp  GlobalPool.h  OpenGLRenderer.cpp  OpenGLRenderer.h  opengl.cpp
src/SPIRV_Converter/: CMakeLists.txt  main.cpp
src/allocators/: Allocator.cpp  Allocator.h  ThreadSafeAllocator.cpp  ThreadSafeAllocator.h
src/android/: AndroidWindow.cpp  AndroidWindow.h
src/assets/: gtxd.ymt.rbf.xml
src/assets/shaders/: gbuffer.frag  gbuffer.vert  gbuffer2.frag  gbuffer2.vert  gbufferLighting.frag  hdrShader.frag  ssao.frag  ssao.shader  ssao.vert  ssao_blur.frag  ssao_blur.vert  water.shader
src/assets/shaders/old/: forward.shader  gbuffer.shader  ssao_blur.shader
src/assets/shaders/vulkan/: compile.bat  frag.spv  vert.spv  vulkan.vert
src/ios/: AppDelegate.h  AppDelegate.m  Info.plist  ViewController.h  ViewController.mm  main.m
src/loaders/: AwcLoader.cpp  AwcLoader.h  CacheDatFile.cpp  CacheDatFile.h  FileType.h  Meta.h  RpfEntry.cpp  RpfEntry.h  RpfFile.cpp  RpfFile.h  YbnLoader.cpp  YbnLoader.h  YcdLoader.cpp  YcdLoader.h  YddLoader.cpp  YddLoader.h  YdrLoader.cpp  YdrLoader.h  YftLoader.cpp  YftLoader.h  YmapLoader.cpp  YmapLoader.h  YmfLoader.cpp  YmfLoader.h  YndLoader.cpp  YndLoader.h  YnvLoader.cpp  YnvLoader.h  YscLoader.cpp  YscLoader.h  YtdLoader.cpp  YtdLoader.h  YtypLoader.cpp  YtypLoader.h
src/macOS/: AppDelegate.h  AppDelegate.m  Shaders.metal  ViewController.h  ViewController.mm  main.m
src/metal/: DebugDrawer.cpp  DebugDrawer.h  GameRenderer.cpp  GameRenderer.h  Geometry.cpp  Geometry.h  MetalRenderer.h  MetalRenderer.mm  PhysicsDebugDrawer.cpp  PhysicsDebugDrawer.h  Shader.cpp  Shader.h  Shaders.metal  TextureDecompressor.cpp  TextureDecompressor.h  fxaaShader.metal  guiShader.metal  simd_t.h  stb_image.h
src/notneeded/: Mesh.h  Model.h  PhysicsDebugDrawer.h  ShaderManager.cpp  Skybox.cpp  TextureManager.cpp  TextureManager.h
src/opengl/: GameRenderer.cpp  GameRenderer.h  Geometry.cpp  Geometry.h  PhysicsDebugDrawer.cpp  Shader.h
src/shaderCompiler/: CMakeLists.txt  main.cpp
src/utils/: fileHandle.h  mutex.h  queue.h  thread.h
src/vulkan/: VulkanRenderer.cpp  VulkanRenderer.h
src/windows/: InputManager.cpp  InputManager.h  NativeWindow.cpp  NativeWindow.h  RenderingSystem.cpp  RenderingSystem.h  Win32Window.cpp  Win32Window.h  main.cpp
zlib/: zlibwapi.lib
zlib/contrib/masmx64/: gvmat64.lst
